[project]
name = "jupyterlab_service"
version = "0.1.0"
description = "JupyterLab web service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-resource-usage>=1.2.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
