[project]
name = "jupyterlab_service"
version = "1.0.0"
description = "JupyterLab web service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-resource-usage>=1.2.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
