[project]
name = "jupyterlab_service"
version = "1.0.0"
description = "JupyterLab web service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-resource-usage>=1.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
]
